alawdec: Fix Memory leak in error case

https://bugzilla.gnome.org/show_bug.cgi?id=785435